--- a/package.json
+++ b/package.json
@@ -1,30 +1,23 @@
 {
-  "//1": "describes your app and its dependencies",
-  "//2": "https://docs.npmjs.com/files/package.json",
-  "//3": "updating this file will download and update your packages",
-  "name": "hello-express",
+  "name": "nezspammer",
   "version": "0.0.1",
-  "description": "A simple Node app built on Express, instantly up and running.",
-  "main": "server.js",
+  "description": "A simple email spammer written in JS",
+  "main": "index.js",
   "//scripts": {
-    "start": "node server.js"
+    "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.17.1",
-    "nodemailer": "^6.4.16",
     "sendmail": "^1.6.1",
     "booru": "^2.4.0"
   },
   "engines": {
     "node": "12.x"
   },
-  "repository": {
-    "url": "https://glitch.com/edit/#!/hello-express"
-  },
   "license": "MIT",
   "keywords": [
     "node",
     "glitch",
-    "express"
+    "email",
+    "spammer"
   ]
 }
